# Petiole

./: CMakeLists.txt  CTestConfig.cmake  PetioleToolkit.remote.cmake  README.md  itk-module.cmake
Data/: WikipediaDisjkstrasMesh.nwb  WikipediaDisjkstrasMesh.vtk  WikipediaDisjkstrasMesh2.nwb
Utilities/: CMakeLists.txt
Utilities/Conversion/: CMakeLists.txt  MatlabToNetworkWorkbench.cxx
Utilities/Metrics/: CMakeLists.txt  CharacteristicPathLength.cxx  DiceCoefficientByDensity.cxx  GlobalEfficiency.cxx  GraphAssortativity.cxx  GraphDensity.cxx  GraphDensityThreshold.cxx  GraphDiceCoefficient.cxx  GraphVolumeLengthNormalize.cxx  GraphVolumeNormalize.cxx  LargestConnectedComponent.cxx  LargestConnectedComponentSize.cxx  MeanLocalEfficiency.cxx  MeanNodeClusteringCoefficient.cxx  MeanNodeDegree.cxx  RichClubCoefficient.cxx
include/: itkBoykovAlphaExpansionMRFImageFilter.h  itkBoykovAlphaExpansionMRFImageFilter.hxx  itkBoykovGraphTraits.h  itkBoykovImageToGraphFunctor.h  itkBoykovImageToGraphFunctor.hxx  itkBoykovMinCutGraphFilter.hxx  itkDefaultGraphTraits.h  itkDefaultImageToGraphFunctor.h  itkDefaultImageToGraphFunctor.hxx  itkDensityThresholdGraphFilter.h  itkDensityThresholdGraphFilter.hxx  itkDijkstrasDistanceMatrixGraphFilter.h  itkDijkstrasDistanceMatrixGraphFilter.hxx  itkDijkstrasGraphTraits.h  itkDijkstrasPathGraphFilter.h  itkDijkstrasPathGraphFilter.hxx  itkDijkstrasShortestPathGraphCalculator.h  itkDijkstrasShortestPathGraphCalculator.hxx  itkDijkstrasUniquePathsGraphFilter.h  itkDijkstrasUniquePathsGraphFilter.hxx  itkExtractKCoreGraphFilter.h  itkExtractKCoreGraphFilter.hxx  itkExtractRichClubGraphFilter.h  itkExtractRichClubGraphFilter.hxx  itkExtractSCoreGraphFilter.h  itkExtractSCoreGraphFilter.hxx  itkExtractSubgraphFilter.h  itkExtractSubgraphFilter.hxx  itkGraph.h  itkGraph.hxx  itkGraphDensityCalculator.h  itkGraphDensityCalculator.hxx  itkGraphDuplicator.h  itkGraphFileReader.h  itkGraphFileReader.hxx  itkGraphFileWriter.h  itkGraphFileWriter.hxx  itkGraphIntersectionGraphFilter.h  itkGraphIntersectionGraphFilter.hxx  itkGraphNodeAssortativityCalculator.h  (+42 more)
test/: CMakeLists.txt  itkBoykovGraphCutFilterTest.cxx  itkDijkstrasDistanceMatrixGraphFilterTest.cxx  itkDijkstrasGraphTraitsTest.cxx  itkDijkstrasPathGraphFilterTest.cxx  itkDijkstrasShortestPathCalculatorTest.cxx  itkDijkstrasUniquePathsGraphFilterTest.cxx  itkExtractKCoreGraphFilterTest.cxx  itkExtractRichClubGraphFilterTest.cxx  itkExtractSCoreGraphFilterTest.cxx  itkExtractSubgraphFilterTest.cxx  itkGraphDensityCalculatorTest.cxx  itkGraphFileReaderTest.cxx  itkGraphFileWriterTest.cxx  itkGraphNodeAssortativityCalculatorTest.cxx  itkGraphNodeClusteringCoefficientCalculatorTest.cxx  itkGraphNodeDegreeCentralityCalculatorTest.cxx  itkGraphNodeJointDegreeCalculatorTest.cxx  itkGraphNodeNeighborhoodOverlapCalculatorTest.cxx  itkGraphNodeStrengthCalculatorTest.cxx  itkGraphRichClubCoefficientCalculatorTest.cxx  itkGraphTest.cxx  itkGraphTopologicalOverlapCalculatorTest.cxx  itkMatlabLevel5FileReaderTest.cxx  itkMatrixToGraphFilterTest.cxx  itkNWBDataFileReaderTest.cxx  itkNWBDataFileWriterTest.cxx  itkVtkPolyDataFileReaderTest.cxx
